Vaesen/vaesen_sheet.css
/* ... */
/* sidebar */

.sheet-main-box .secret-roll {
    display: inline-block;
    width: auto;
    cursor: pointer;
}

.sheet-main-box .secret-roll input {
    vertical-align: baseline;
    margin-right: 4px;
}

.sheet-main-box-table {
    margin: 0;
    width: 100%;
}

.sheet-main-box-table .table-title {
    font-weight: bold;
    color: #000;
    font-size: 18px;
    padding-top: 10px;
    text-transform: uppercase;
}

.sheet-main-box-table td {
    color: #000;
    font-size: 16px;
    line-height: 36px;
    padding: 0 3px;
    vertical-align: top;
}

.sheet-main-box-table tr.border-bottom {
    border-bottom: 2px solid #483517;
}

.sheet-main-box-table tr:nth-child(even) {
    background: rgb(0 0 0 / 7%);
}

.sheet-main-box-table.no-background tr:nth-child(even) {
    background: transparent;
}

.sheet-main-box-table td input[type="checkbox"] {
    transform: scale(1.5);
    width: auto;
}

.sheet-main-box-table td input {
    width: 100%;
}

.sheet-main-box-table .box-input {
    margin-bottom: 10px;
}

.card-box {
    padding: 14px;
    position: relative;
    z-index: 1;
    margin: 10px;
    border-radius: 9px 0 9px 0;
    background: rgb(0 0 0 / 7%);
    margin-bottom: 10px;
    border: 2px solid #483517;
}

.card-box:before {
    content: "";
    width: calc(100% + 29px);
    height: calc(100% + 28px);
    left: -29px;
    top: -28px;
    position: absolute;
    z-index: -1;
    background-repeat: no-repeat;
}

.card-box:after {
    content: "";
    width: calc(100% + 20px);
    height: calc(100% + 25px);
    right: -20px;
    bottom: -25px;
    position: absolute;
    transform: rotate(-180deg);
    z-index: -1;
    background-repeat: no-repeat;
}

.card-box .card-title {
    background-color: #b09d8d;
    border: 1px solid #483517;
    color: #483517;
    padding: 0 18px;
    font-size: 14px;
    font-weight: bold;
    margin-bottom: 10px;
    box-shadow: 4px 4px 0px 0px #00000057;
    letter-spacing: 2px;
}


.attribute-box {
    display: flex;
    align-items: center;
    justify-content: space-between;
    margin-bottom: 10px;
}

.charsheet .sheet-main-box button[type="roll"] {
    background-color: #dfd9d2;
    font-size: 16px;
    text-align: left;
    padding: 3px 12px;
    line-height: normal;
    border: 1px solid #483517;
    box-shadow: 4px 4px 0px 0px #00000057;
    color: #000;
    background-image: none;
    width: 72%;
    overflow: hidden;
    display: flex;
    align-items: center;
}

.charsheet .sheet-main-box button[type="roll"]:hover {
    border-color: red;
}
.charsheet .sheet-main-box button[type="roll"]::before {
    color: #000;
	vertical-align: middle;
	margin-right: 5px;
	background-repeat: no-repeat;
	background-size: contain;
	content: "";
	display: inline-block;
	height: 30px;
}

.charsheet .sheet-main-box button[type="roll"] span {
    margin-right: 5px;
}
.charsheet .sheet-main-box button[type="roll"] span:last-child {
    margin: 0;
}

.sheet-main-box .std-roll-button {
    width: 30px !important;
    height: 30px !important;
    font-family: dicefontd20;
    font-size:24px !important;
}

.charsheet .sheet-main-box button[type="action"] {
    background-color: #dfd9d2;
    font-size: 16px;
    padding: 3px 12px;
    line-height: normal;
    border: 1px solid #483517;
    box-shadow: 4px 4px 0px 0px #00000057;
    color: #000;
    background-image: none;
    overflow: hidden;
    display: flex;
    align-items: center;
    line-height: 29px;
    border-radius: 5px;
}

.attribute-box input {
    width: 40px;
    text-align: center;
}

.charsheet .attribute-box input[type="number"] {
    width: 55px;
}

.attribute-box button span.small {
    font-size: 13px;
}

.sheet-main-box textarea {
    background-attachment: local;
    background-color: #Fff;
    background-image:
        linear-gradient(to right, white 5px, transparent 5px),
        linear-gradient(to left, white 5px, transparent 5px),
        repeating-linear-gradient(white, white 35px, #483517 35px, #483517 36px, white 36px);
    line-height: 36px;
    font-size: 16px;
    padding: 5px;
    border: 1px solid #483517;
    box-shadow: 4px 4px 0px 0px #00000057;
    height: 300px;
    resize: vertical;
}


.label-with-checkboxes {
    background: #dfd9d2;
    border: 1px solid #483517;
    box-shadow: 4px 4px 0px 0px #00000057;
    border-radius: 5px;
    padding: 5px 10px;
    text-align: center;
    padding-bottom: 15px;
    margin-bottom: 10px;
}

.label-with-checkboxes span {
    display: block;
    text-align: center;
    font-size: 22px;
    color: #483517;
    line-height: normal;
}

.label-with-checkboxes input {
    transform: scale(1.5);
    margin: 5px;
}

.diemod {
    display: flex;
    margin-bottom: 8px;
}
.diemod input {
    margin-right: 5px;
}
.diemod span {
    font-size: 20px;
}


/* Roll Template */
.sheet-rolltemplate-vaesen .sheet-template-wrap {
    background-color:#483517;
    background-position: top center;
    background-size: cover;
    border: 3px solid #483517;
    padding-top: 8px;
    margin: 0 5px;
    counter-reset: hit;
}

.sheet-rolltemplate-vaesen .sheet-template-header {
    display: flex;
    justify-content: space-evenly;
    justify-self: center;
    width: 105%;
    margin: 2px -9px 2px -9px;
    padding: 0 5px 0 5px;
    word-break: break-word;
    color: #fff;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    border-bottom-right-radius: 9px;
    border-bottom-left-radius: 9px;
    background-color: #000;
}

.sheet-rolltemplate-vaesen .sheet-template-grid-item.sheet-template-span-six.sheet-template-header{
    margin-bottom: 5px;
    box-shadow: 0 2px 7px #000;
    font-weight: bold;
}

.sheet-rolltemplate-vaesen .sheet-template-grid-item.sheet-template-span-six.sheet-template-header a {
    color: #fff;
    font-weight: bold;
}

.sheet-rolltemplate-vaesen .sheet-template-subtitle {
    font-family: 'Village';
    color: #fff;
    font-size: 22px;
    padding: 10px 0;
    text-align: center;
}
/* ... */

